# CryptoSampleKMPMobileApp

./: build.gradle.kts  gradle.properties  settings.gradle.kts
shared/: CMakeLists.txt  build.gradle.kts
shared/src/androidAndJvm/kotlin/com/orcchg/crypto/sample/mobileapp/common/: dispatchers.kt
shared/src/androidMain/: AndroidManifest.xml
shared/src/androidMain/cpp/: cryptoutils.cpp
shared/src/androidMain/kotlin/com/orcchg/: Platform.android.kt
shared/src/androidMain/kotlin/com/orcchg/crypto/sample/mobileapp/: Platform.android.kt
shared/src/androidUnitTest/kotlin/com/orcchg/: Test.android.kt
shared/src/commonMain/composeResources/drawable/: compose_multiplatform.xml  ic_back.xml  ic_close.xml  ic_fav_off.xml  ic_fav_on.xml  ic_search.xml
shared/src/commonMain/composeResources/values/: strings.xml
shared/src/commonMain/kotlin/com/orcchg/: Greeting.kt  Platform.kt
shared/src/commonMain/kotlin/com/orcchg/crypto/sample/mobileapp/: App.kt  Greeting.kt  Platform.kt
shared/src/commonMain/kotlin/com/orcchg/crypto/sample/mobileapp/common/: dispatchers.kt
shared/src/commonTest/kotlin/com/orcchg/: Test.kt
shared/src/iosMain/kotlin/com/orcchg/: Platform.ios.kt
shared/src/iosMain/kotlin/com/orcchg/crypto/sample/mobileapp/: MainViewController.kt  Platform.ios.kt
shared/src/iosTest/kotlin/com/orcchg/: Test.ios.kt
shared/src/jvmMain/kotlin/com/orcchg/crypto/sample/mobileapp/: Platform.jvm.kt  main.kt
shared/src/wasmJsMain/kotlin/com/orcchg/crypto/sample/mobileapp/: Platform.wasmJs.kt  main.kt
shared/src/wasmJsMain/resources/: index.html
(+151 files in other folders)
